public class Guard {
    private String name;
    private int age;

    public Guard(String name, int age) {
        this.name = name;
        this.age = age;
    }

    // Getters
    public String getName() {
        return name;
    }

    public int getAge() {
        return age;
    }

    // Setters
    public void setName(String name) {
        this.name = name;
    }

    public void setAge(int age) {
        this.age = age;
    }

    @Override
    public String toString() {
        return "Guard{" +
                "name='" + name + '\'' +
                ", age=" + age +
                '}';
    }
}