public enum PaymentStatus {
    PENDING,
    COMPLETED,
    FAILED
}