public interface PricingStrategy {
    double calculateCharges(Ticket ticket);
}