public enum VehicleType {
    BIKE,
    CAR,
    TRUCK
}